<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="8dp"
    android:orientation="horizontal">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <EditText
            android:id="@+id/user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/colorPrimaryDark" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers" />

        <EditText
            android:id="@+id/user_followers"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/colorPrimaryDark" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biography" />

        <EditText
            android:id="@+id/user_biography"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/colorPrimaryDark" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name" />

        <EditText
            android:id="@+id/user_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/colorPrimaryDark" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created" />

        <EditText
            android:id="@+id/user_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/colorPrimaryDark" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company" />

        <EditText
            android:id="@+id/user_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/colorPrimaryDark" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/colorPrimaryDark" />
    </TableRow>
</TableLayout>
